# Amethyst

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_windows.sh  cap.cap  imgui.ini
build_windows/: mingw-w64-x86_64.cmake
engineheaders/: Doxyfile  master.h  weak_vector.h
engineheaders/engine/: Filesystem.h  master.h
engineheaders/engine/geometry/: Model.h
engineheaders/engine/graphics/: Camera.h  ModelInstance.h  RWorld.h  Renderer.h  Window.h
engineheaders/engine/graphics/opengl/: STDGLRenderer.h
engineheaders/graphics/: Camera.h  ModelInstance.h  RWorld.h  Renderer.h  Window.h
engineheaders/graphics/opengl/: STDGLRenderer.h
engineheaders/rendering/: Context.h  Window.h
engineheaders/rendering/opengl/: GLContext.h
include/: Shadinclude.hpp
include/assimp/: revision.h
include/glad/: glad.h
include/glm/: glm.hpp
include/vdfparser/: errors.hpp  keyvalue.hpp  peekable-stream.hpp  vdf.hpp  vdfparser.hpp
libs/vdfparser/: README.md  case-insensitive-map.cpp  case-insensitive-map.hpp  keyvalue.cpp  peekable-stream.cpp  vdf.cpp
src/: imgui.ini  main.cpp  main.h  mesh.h  model.h  shader.h
src/geometry/: Model.cpp
src/graphics/: Renderer.cpp  Window.cpp  misc.cpp  misc.h
src/graphics/opengl/: GLMisc.cpp  GLMisc.h  InderectDrawBuffer.h  STDGLCamera.cpp  STDGLCamera.h  STDGLModel.cpp  STDGLModel.h  STDGLRWorld.cpp  STDGLRWorld.h  STDGLRenderer.cpp  STDGLShaderSystem.cpp  STDGLShaderSystem.h  STDGLWindow.cpp  STDGLWindow.h
src/one-off_libs/: glad.c
src/rendering/: Context.cpp  Window.cpp
src/rendering/opengl/: GLContext.cpp  GLContext.h
testgame/: Untitled2 (Copy 2).glb  profile.sh
testgame/models/: Untitled2 (Copy).glb  Untitled2.glb  cube.glb  error.glb  multimesh.glb  sphere.glb
testgame/scripts/shaders/: glshaders.adf  glshaders.vdf
testgame/scripts/shaders/opengl/: STDGLModel.incl  STDGLModel_InstancePreprocess.cs  STGLModel_IndirectBufferReplicator.cs  generic.fs  generic.vs
